Fusepool integration